crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__batterskull_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 104,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Living weapon (When ~ enters, create a 0/0 black Phyrexian Germ creature token, then attach this to it.)"
      },
      "node": {
        "Keyword": "LivingWeapon"
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 105,
          "end_byte": 165,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Equipped creature gets +4/+4 and has vigilance and lifelink."
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": null,
              "properties": [
                {
                  "type": "EquippedBy"
                }
              ]
            },
            "modifications": [
              {
                "type": "AddPower",
                "value": 4
              },
              {
                "type": "AddToughness",
                "value": 4
              },
              {
                "type": "AddKeyword",
                "keyword": "Vigilance"
              },
              {
                "type": "AddKeyword",
                "keyword": "Lifelink"
              }
            ],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "Equipped creature gets +4/+4 and has vigilance and lifelink."
          },
          "source_text": "Equipped creature gets +4/+4 and has vigilance and lifelink.",
          "body_ir": null
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 2,
          "last_line": 2,
          "start_byte": 166,
          "end_byte": 200,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{3}: Return ~ to its owner's hand."
      },
      "node": {
        "Spell": {
          "source_text": "Return ~ to its owner's hand",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 28,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Return ~ to its owner's hand"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Bounce",
                    "target": {
                      "type": "SelfRef"
                    },
                    "destination": null
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Mana",
              "cost": {
                "type": "Cost",
                "shards": [],
                "generic": 3
              }
            },
            "description": "{3}: Return ~ to its owner's hand.",
            "stages": [
              "NormalizeActivatedManaInstead",
              "ExtractCostReduction",
              "ExtractManaSpendTrigger"
            ]
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    },
    {
      "id": 3,
      "source": {
        "id": {
          "item": 3,
          "ordinal": 0
        },
        "span": {
          "first_line": 3,
          "last_line": 3,
          "start_byte": 201,
          "end_byte": 210,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Equip {5}"
      },
      "node": {
        "Spell": {
          "source_text": "Equip {5}",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 9,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Equip {5}"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Attach",
                    "target": {
                      "type": "Typed",
                      "type_filters": [
                        "Creature"
                      ],
                      "controller": "You",
                      "properties": []
                    },
                    "selection": {
                      "at_resolution": {}
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Mana",
              "cost": {
                "type": "Cost",
                "shards": [],
                "generic": 5
              }
            },
            "activation_restrictions": [
              {
                "type": "AsSorcery"
              }
            ],
            "ability_tag": {
              "type": "Equip"
            },
            "description": "Equip {5}"
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "Living weapon (When this Equipment enters, create a 0/0 black Phyrexian Germ creature token, then attach this to it.)\nEquipped creature gets +4/+4 and has vigilance and lifelink.\n{3}: Return this Equipment to its owner's hand.\nEquip {5}",
  "card_name": "Batterskull"
}
